--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,5 +5,10 @@
 
 <h2>All posts:</h2>
 <% @posts.each do |post| %>
-  <p><a href="<%=post_path(post)%>"</a><%= post.title %></p>
+  <p><%= post.title%></p>
+     <td><%= link_to 'Show', post_path(post) %></td>
+      <td><%= link_to 'Edit', edit_post_path(post) %></td>
+       <td><%= link_to 'Destroy', post_path(post),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
 <% end %>
