--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,22 @@
 <h1>Wholistic Group</h1>
 
-<h2><%= @post.title  %></h2>
-<p><%= @post.body %></p>
+<p>
+  <strong>Title:</strong>
+  <%= @post.title %>
+</p>
+ 
+<p>
+  <strong>Body:</strong>
+  <%= @post.body %>
+</p>
+
+
+ 
+<h2>Comments:</h2>
+<%= render @post.comments %>
+ 
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
+
+<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to 'Back', posts_path %>
